# real-time-crypto-price-prediction-ml-system

./: .editorconfig  .env.local.example  .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
dashboards/: candles.json
deployments/dev/backfill-technical-indicators/: backfill-technical-indicators-cm.yaml  candles-historical-d.yaml  kustomization.yaml  technical-indicators-historical-d.yaml  technical-indicators-historical-j.yaml  trades-historical-d.yaml
deployments/dev/candles/: candles-d.yaml
deployments/dev/kind/: create_cluster.sh  install_metabase.sh  kind-with-portmapping.yaml
deployments/dev/news/: kustomization.yaml  (+2 more)
deployments/dev/news-sentiment/: kustomization.yaml  news-sentiment-cm.yaml  news-sentiment-d.yaml
docker/: news-sentiment.Dockerfile  news.Dockerfile  technical-indicators-1stage.Dockerfile  technical-indicators.Dockerfile  training-pipeline.Dockerfile
scripts/: build-and-push-image.sh
services/candles/: pyproject.toml
services/news/: .env.local.sample  pyproject.toml
services/news-sentiment/: .env.local.sample  Makefile  README.md  download_historical_news.sh  pyproject.toml  query.sql
services/news-sentiment/src/news_sentiment/: __init__.py  config.py  curate_dataset.py  dataset.py  evaluate.py  main.py  metrics.py  sentiment_extractor.py
services/news-sentiment/src/news_sentiment/baml_src/: clients.baml  sentiment_scores.baml
services/prediction-api/: .env.local.sample  Cargo.toml  Makefile
services/predictor/: pyproject.toml
services/technical_indicators/: pyproject.toml
services/trades/: pyproject.toml
(+27 files in other folders)
