[project]
name = "technical-indicators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "msaharan", email = "mohit@msaharan.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
